--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rayueka.shopping-cart",
+  "name": "rayuela-shopping-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.3",
+    "use-local-storage-state": "^19.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
