--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.4.3",
     "use-local-storage-state": "^19.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
